updated the view-questions, session handling in opportunities

--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -414,7 +414,13 @@
             // $('#category-select').append(`<option value="${'optionValue'}"> 
             //                                    ${'optionText'} 
             //                               </option>`); 
-
+            let version = localStorage.getItem('version') ? localStorage.getItem('version') : 0
+            let currentVersion = 1
+            debugger
+            if( version < currentVersion ){
+                localStorage.setItem('version', currentVersion)
+                window.location.reload(true)
+            }
             let _selectValue = document.getElementById('category-select')
 
             let body = { view_categories: true }
