updated the logo of wrapupeventz

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <div class="header-logo">
             <a class="site-logo" href="index.html">
-                <img src="/WRAP UP LOGO.png" alt="Homepage">
+                <img src="/WRAP UP LOGO TEXT.png" alt="Homepage">
                 <!-- Your Logo -->
             </a>
         </div>
