--- a/admin/view-answers/profile-id.html
+++ b/admin/view-answers/profile-id.html
@@ -114,7 +114,7 @@
                       '<div class="row">' +
                       val.answer.split(',').map(images =>
                         '<div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-5">' +
-                        '<a href=' + images + ' target="_blank"><img src="' + images + '" width="100%" height="300px"/></a>' +
+                        '<a href=' + images + ' target="_blank"><img src="' + images + '" width="100%" height="auto"/></a>' +
                         '</div>'
                       ).join('') +
                       '</div>' +
