--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -375,7 +375,7 @@
         </div> -->
     </div>
 
-    
+
 
     <script>
 
@@ -415,9 +415,9 @@
             //                                    ${'optionText'} 
             //                               </option>`); 
             let version = localStorage.getItem('version') ? localStorage.getItem('version') : 0
-            let currentVersion = 2
+            let currentVersion = 3
             debugger
-            if( version < currentVersion ){
+            if (version < currentVersion) {
                 localStorage.setItem('version', currentVersion)
                 window.location.reload(true)
             }
@@ -524,7 +524,7 @@
                                     else if (val.field_json.type === 'file') {
                                         _temp.push('<div class="form-group">' +
                                             '<label for=' + val._id + ' class="form-label">' + val.field_json.label + '</label>' +
-                                            '<input type = ' + val.field_json.type + ' name="email" required multiple id=' + val._id + ' placeholder="Enter here..." />' +
+                                            '<input type = ' + val.field_json.type + ' name="email" required multiple id=' + val._id + ' accept="image/*, application/pdf" placeholder="Enter here..." />' +
                                             '</div>')
                                         if ((_temp.length % 2 === 0)) {
                                             _arr.push('<div class="form-row">' +
@@ -822,62 +822,62 @@
                     }
                 })
                 document.getElementById('loading').style.display = 'none'
-                    document.getElementById('fill-form').style.display = "none"
-                    document.getElementById('conf-modal').style.display = 'block'
+                document.getElementById('fill-form').style.display = "none"
+                document.getElementById('conf-modal').style.display = 'block'
 
-                    setTimeout(() => {
-                        window.location.replace("http://wrapupeventz.com/")
-                    }, 1500)
-                    // await fetch(`${Api}api/upload`, {
-                    //         method: 'POST',
-                    //         headers: {
-                    //             // 'Content-Type': 'application/json;charset=utf-8',
-                    //             'Content-Type': 'multipart/form-data'
-                    //         },
-                    //         body: formData
-                    //     })
-                    // .then(response => {
-                        // debugger
+                setTimeout(() => {
+                    window.location.replace("http://wrapupeventz.com/")
+                }, 1500)
+                // await fetch(`${Api}api/upload`, {
+                //         method: 'POST',
+                //         headers: {
+                //             // 'Content-Type': 'application/json;charset=utf-8',
+                //             'Content-Type': 'multipart/form-data'
+                //         },
+                //         body: formData
+                //     })
+                // .then(response => {
+                // debugger
 
 
-                        // NEW JSON
+                // NEW JSON
 
-                        // response.data.data.map(val => {
+                // response.data.data.map(val => {
 
-                        //     var _obj = {}
-                        //     var keys = Object.keys(val)[0]
-                        //     var values = Object.values(val)[0].map(val => { return val.Location })
-                        //     _obj['id'] = keys
-                        //     _obj['answer'] = values.toString()
-                        //     _api_obj['answers'].push(_obj)
-                        // })
-// -----------------------------------------------------------------------------------
-                    // console.log('resOfPostAnswers', res)
-                        // response.data.data.map(val => {
-                        //     let _temp_storage = {}
-                        //     _temp_storage['id'] = Object.keys(val).toString()
-                        //     debugger
-                        //     let _length = val[Object.keys(val).toString()].length
-                        //     let _arr = []
-                        //     for (var i = 0; i < _length; i++) {
-                        //         let index = i
-                        //         _arr.push([Object.keys(val).toString()][index].Location)
-                        //     }
-                        //     _temp_storage['answer'] = _arr
-                        //     _api_obj['answers'].push(_temp_storage)
-                        // })
-                    // }
-                    // ).catch((err)=>{
-                    //     document.getElementById('loading').style.display = 'none'
-                    // document.getElementById('fill-form').style.display = "none"
-                    // document.getElementById('replaceText-1').innerHTML="Failed !"
-                    // document.getElementById('replaceText-2').innerHTML="Sorry for the inconvenience. We will get back to you soon."
-                    // document.getElementById('conf-modal').style.display = 'block'
+                //     var _obj = {}
+                //     var keys = Object.keys(val)[0]
+                //     var values = Object.values(val)[0].map(val => { return val.Location })
+                //     _obj['id'] = keys
+                //     _obj['answer'] = values.toString()
+                //     _api_obj['answers'].push(_obj)
+                // })
+                // -----------------------------------------------------------------------------------
+                // console.log('resOfPostAnswers', res)
+                // response.data.data.map(val => {
+                //     let _temp_storage = {}
+                //     _temp_storage['id'] = Object.keys(val).toString()
+                //     debugger
+                //     let _length = val[Object.keys(val).toString()].length
+                //     let _arr = []
+                //     for (var i = 0; i < _length; i++) {
+                //         let index = i
+                //         _arr.push([Object.keys(val).toString()][index].Location)
+                //     }
+                //     _temp_storage['answer'] = _arr
+                //     _api_obj['answers'].push(_temp_storage)
+                // })
+                // }
+                // ).catch((err)=>{
+                //     document.getElementById('loading').style.display = 'none'
+                // document.getElementById('fill-form').style.display = "none"
+                // document.getElementById('replaceText-1').innerHTML="Failed !"
+                // document.getElementById('replaceText-2').innerHTML="Sorry for the inconvenience. We will get back to you soon."
+                // document.getElementById('conf-modal').style.display = 'block'
 
-                    // setTimeout(() => {
-                    //     window.location.replace("http://wrapupeventz.com/")
-                    // }, 1500)
-                    // })
+                // setTimeout(() => {
+                //     window.location.replace("http://wrapupeventz.com/")
+                // }, 1500)
+                // })
             }
             // await fetch(`${Api}api/postanswers`, {
             //     method: 'POST',
