updated the multiselect feture

--- a/admin/upload-questions/index.html
+++ b/admin/upload-questions/index.html
@@ -205,7 +205,7 @@
                         'hidden',
                         'paragraph',
                         'starRating',
-                        'checkbox-group',
+                        // 'checkbox-group',
                         'select'
                     ],
                     disabledAttrs: ["className", "inline", "toggle", "access", "name", "other", "helpetext"],
